# MySAPR

./: CMakeLists.txt  Doxyfile  README.md  res.qrc
libs/: CMakeLists.txt
libs/QCustomPlot2/: CMakeLists.txt
src/: main.cpp  mySAPRWindow.cpp  mySAPRWindow.h
src/construction/: constructionElement.cpp  constructionElement.h  longitudinalForce.cpp  longitudinalForce.h  rod.cpp  rod.h  sectionalForce.cpp  sectionalForce.h
src/graphics/: constructionGraphicsScene.cpp  constructionGraphicsScene.h  constructionPlotGraphicsScene.cpp  constructionPlotGraphicsScene.h  longitudinalForceGraphicsItem.cpp  longitudinalForceGraphicsItem.h  pillarGraphicsItem.cpp  pillarGraphicsItem.h  plotValuesGraphicsItem.cpp  plotValuesGraphicsItem.h  rodGraphicsItem.cpp  rodGraphicsItem.h  sectionalForceGraphicsItem.cpp  sectionalForceGraphicsItem.h
src/graphics/labels/: nodeNumberGraphicsItem.cpp  nodeNumberGraphicsItem.h  rodLengthGraphicsItem.cpp  rodLengthGraphicsItem.h  rodNumberGraphicsItem.cpp  rodNumberGraphicsItem.h
src/postprocessor/: postProcessorWindow.cpp  postProcessorWindow.h
src/processor/: linearMethods.h  linearMethods.hpp  processor.cpp  processor.h
src/view/: longitudinalForcePropertiesWidget.cpp  longitudinalForcePropertiesWidget.h  rodPropertiesWidget.cpp  rodPropertiesWidget.h  sectionalForcePropertiesWidget.cpp  sectionalForcePropertiesWidget.h
src/widgets/: qDoubleSpinBoxFine.cpp  qDoubleSpinBoxFine.h  qDoubleSpinBoxNotZero.cpp  qDoubleSpinBoxNotZero.h  qGraphicsViewBlocked.cpp  qGraphicsViewBlocked.h
